# rushttp

./: Cargo.toml  DEVELOPMENT.md  Dockerfile
src/: main.rs  server.rs
src/http/: error.rs  header.rs  method.rs  mod.rs  parser.rs  request.rs  response.rs  status.rs  version.rs
src/server/: context.rs  error.rs  handler.rs  mod.rs  resource.rs  response.rs
src/static/assets/html/: index.html
src/uri/: authority.rs  error.rs  mod.rs  path.rs  query.rs  scheme.rs  uri.rs
