[package]
name = "rushttp"
version = "0.1.0"
authors = ["terassyi <iscale821@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
thiserror = "1.0"
chrono = "0.4"
chrono-tz = "0.4"
httpdate = "0.3.2"